--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,8 @@
-PORT=
+PORT=3000
 MAILER_SERVICE=
-MAILER_MAIL=
+MAILER_EMAIL=
 MAILER_SECRET_KEY=
+MONGO_URL=
+MONGO_DB_NAME=
+MONGO_USER=
+MONGO_PASS=
