--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "cron": "^3.1.6",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.1",
     "mongoose": "^8.2.2",
-    "nodemailer": "^6.9.12"
+    "nodemailer": "^6.9.12",
+    "prisma": "^5.11.0"
   }
 }
